# DevTools

./: .gitignore  DevTools.spec  LICENSE  Makefile  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: check_pr.yml
app/: home.py
app/core/: customer_line_edit.py  toast.py
app/exceptions/: __init__.py  run_exception.py
app/utils/: static.py
app/widgets/: __init__.py  calculate_widget.py  cron_widget.py  json_widget.py  jwt_widget.py  timestamp_widget.py
