[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["zp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pyside6 = "^6.7.0"
pyperclip = "^1.8.2"
py2app = "^0.28.7"
pyinstaller = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tools.py2app.bundle.main]
name = "DevTools"
script = "main.py"
semi-standalone = true
