[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["zp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pyside6 = "6.7"
pyperclip = "^1.8.2"
py2app = "^0.28.7"
pyinstaller = "^6.6.0"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
pydantic = "^2.7.1"
croniter = "^2.0.5"
qdarkstyle = "^3.2.3"

toml = "^0.10.2"
pyjwt = "^2.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.isort]
profile = 'black'
skip_glob = ["proto", "app/rpc/invoker/*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | app/rpc/invoker
)/
'''
